<resources>
	<string name="app_name">VIPA</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_subtitle">vipassistant.portal3@gmail.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="menu_home">Home</string>
	<string name="menu_map_nav">Navigate</string>
	<string name="menu_heatmap">Heatmap</string>
	<string name="menu_monitor">Monitor</string>
	<string name="menu_corona_demo">Location Demo</string>

	<!-- Voice Output Fragment -->

	<string name="pitch">Pitch</string>
	<string name="enter_text">Enter the text you want to hear</string>
	<string name="speed">Speed</string>
	<string name="start_conversion">Go!</string>
	<string name="get_started">Click me to Get Started!</string>
	<string name="welcome">Welcome to the Vip Assistant Demo Application!</string>
	<string name="vinput_welcome">In order to test Voice Inputting Module press mic button and then speak, your speech
		will be translated into text automatically!
	</string>
	<string name="voutput_welcome">In order to test Voice Outputting Module enter a text and
		set voice pitch &amp; speed. Then you are all set! Just press GO. Your text will be translated into speech
		automatically!
	</string>
	<string name="start_scan">Start Scan</string>
	<string name="blescanner_welcome">In order to test BLE Scanner Module press \'Start Scan\' button, then recognized
		nearby BLE devices will be listed automatically!
	</string>
	<string name="home">Home</string>
	<string name="modules">Modules</string>

	<string name="eegeo_api_key">9921c23436e704dc0ed380eafa5afb02</string>
	<string name="nav_helper_icon">ICON</string>
	<string name="vip_navigate">Vip Navigate</string>
	<string name="title_activity_login">Sign in</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="invalid_username">Not a valid username</string>
	<string name="invalid_password">Password must be >5 characters</string>
	<string name="login_failed">"Login failed"</string>
	<string name="title_activity_start">StartActivity</string>
	<!-- Strings used for fragments for navigation -->
	<string name="first_fragment_label">First Fragment</string>
	<string name="second_fragment_label">Second Fragment</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>

	<string name="hello_first_fragment">Hello first fragment</string>
	<string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
	<string name="home_text">Welcome to VipAssistant© 1.0.0</string>
	<string name="home_textt">With VipAssistant© 1.0.0 you can:</string>
	<string name="home_text1">Welcome to VipAssistant© 1.0.0\n\nYou can experience all the features\nspecified in below</string>
	<string name="home_text2">You can also access separate tutorials for these features from \'Help\' button on settings bar</string>
	<string name="vip_screen_msg">VIP Mode Activated\n\nTouch Anywhere on the Screen to Interact with Voice</string>
	<string name="mic">mic</string>
	<string name="by_vipassistant">By VipAssistant</string>
	<string name="additional_settings">Additional Settings</string>
</resources>
