<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vipassistant.mobile.demo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_map_nav"
            android:name="com.vipassistant.mobile.demo.ui.mapnavigation.MapNavigationFragment"
            android:label="@string/menu_map_nav"
            tools:layout="@layout/fragment_map_nav" />

    <fragment
            android:id="@+id/nav_heatmap"
            android:name="com.vipassistant.mobile.demo.ui.heatmap.HeatmapFragment"
            android:label="@string/menu_heatmap"
            tools:layout="@layout/fragment_heatmap" />

    <fragment
        android:id="@+id/nav_monitor"
        android:name="com.vipassistant.mobile.demo.ui.voiceinput.VoiceInputFragment"
        android:label="@string/menu_monitor"
        tools:layout="@layout/fragment_vinput" />

    <fragment
        android:id="@+id/nav_corona_demo"
        android:name="com.vipassistant.mobile.demo.ui.blescanner.BLEScannerFragment"
        android:label="@string/menu_corona_demo"
        tools:layout="@layout/fragment_blescanner" />
</navigation>