<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"> <!-- TODO: check match_parent for both in constraint layout -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".voice.output.MainActivity">

        <EditText
                android:id="@+id/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/enter_text" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch"
                android:textSize="16sp" />

        <SeekBar
                android:id="@+id/seek_bar_pitch"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:progress="50"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="16sp" />

        <SeekBar
                android:id="@+id/seek_bar_speed"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:progress="50" />

        <Button
                android:id="@+id/button_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:text="@string/start_conversion" />
    </LinearLayout>
</ScrollView>
